--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "jquery": "^3.4.1",
     "react": "^16.11.0",
     "react-bootstrap": "^1.0.0-beta.16",
+    "react-cookie": "^4.0.3",
     "react-dom": "^16.11.0",
+    "react-helmet": "^5.2.1",
     "react-scripts": "3.2.0"
   },
   "scripts": {
