--- a/package.json
+++ b/package.json
@@ -7,11 +7,15 @@
     "bootstrap": "^4.4.1",
     "jquery": "^3.4.1",
     "react": "^16.11.0",
+    "react-avatar": "^3.9.2",
+    "react-avatar-generator": "^1.0.3",
     "react-bootstrap": "^1.0.0-beta.16",
     "react-cookie": "^4.0.3",
     "react-dom": "^16.11.0",
     "react-helmet": "^5.2.1",
-    "react-scripts": "3.2.0"
+    "react-responsive-modal": "^5.0.2",
+    "react-scripts": "3.2.0",
+    "sass": "^1.26.3"
   },
   "scripts": {
     "start": "react-scripts start",
