--- a/package.json
+++ b/package.json
@@ -3,19 +3,24 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "axios": "^0.19.0",
+    "axios": "^0.19.2",
     "bootstrap": "^4.4.1",
-    "jquery": "^3.4.1",
-    "react": "^16.11.0",
+    "formik": "^2.1.4",
+    "jquery": "^3.5.0",
+    "react": "^16.13.1",
     "react-avatar": "^3.9.2",
     "react-avatar-generator": "^1.0.3",
-    "react-bootstrap": "^1.0.0-beta.16",
+    "react-bootstrap": "^1.0.0",
     "react-cookie": "^4.0.3",
-    "react-dom": "^16.11.0",
+    "react-datepicker": "^2.14.1",
+    "react-dom": "^16.13.1",
     "react-helmet": "^5.2.1",
     "react-responsive-modal": "^5.0.2",
+    "react-router-dom": "^5.1.2",
     "react-scripts": "3.2.0",
-    "sass": "^1.26.3"
+    "react-ticker": "^1.2.2",
+    "sass": "^1.26.3",
+    "yup": "^0.28.3"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -37,5 +42,6 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  }
+  },
+  "devDependencies": {}
 }
